opam-version: "1.2"
available: [ ocaml-version = "4.04.2" ]
version: "0.1"
maintainer: "paul.biggar@gmail.com"
authors: ["Paul Biggar"]
build: [
  ["jbuilder" "build" "--only" "main" "--root" "."]
]
# TODO: add actual versions and do opam install
depends: [
  "ocamlfind" {build}
  "jbuilder"  {build}
  "core"      {>= "0.9.0"} ]