opam-version: "1.2"
name: "dark"
maintainer: "paul.biggar@gmail.com"
authors: ["Paul Biggar"]
version: "0.1"
license: "PROP"
available: [ ocaml-version = "4.04.2" ]
build: [
  ["jbuilder" "build" "--only" "main" "--root" "."]
]
# TODO: add actual versions and do opam install
depends: [
  "ocamlfind" {build}
  "jbuilder"  {build}
  "core"      {>= "0.9.0"} ]