[package]
name = "dark-stroller"
version = "0.2.0"
edition = "2018"
authors = ["Sam Stokes <me@samstokes.co.uk>", "Dark Developers <ops@darklang.com>"]

[dependencies]
futures = "0.1.29"
hmac = "0.7.1"
hyper = "0.12"
md5 = "0.7.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
sha2 = "0.8.1"
reqwest = "0.9.13"
slog = "2.5.2"
slog-scope = "4.3.0"
slog-json = "2.3.0"
chrono = "0.4.10"
uuid = { version = "0.8", features = ["v4"] }
analytics = "0.2"
