(library
  (name libbackend)
  (modes native)
  (flags (-warn-error +A))
  (preprocess (pps
               landmarks.ppx
               lwt_ppx
               ppx_bin_prot
               ppx_compare
               ppx_deriving.std
               ppx_deriving_yojson
               ppx_fields_conv
               ppx_sexp_conv
               ppx_pipebang
               ))
  (libraries  libtarget_ocaml
              libexecution
              libservice
              cohttp.lwt
              core_extended
              cstruct
              curl
              curl.lwt
              ezgzip
              gcloud
              lwt
              magic-mime
              multipart-form-data
              nocrypto
              nocrypto.lwt
              postgresql
              ppx_deriving_yojson.runtime
              session
              session-postgresql-lwt
              session-cohttp-lwt
              sodium
              uutf
              yojson
              x509
              )
)


