; Libbackend_stdlib is now it's own library, and Libbackend_basics are it's dependencies

(library
  (name libbackend_basics)
  (modes native)
  (flags (-warn-error +A -w +9))
  (preprocess (pps
               lwt_ppx
               ppx_bin_prot
               ppx_deriving.std
               ppx_deriving_yojson
               ppx_fields_conv
               ppx_sexp_conv
               ppx_pipebang
               ppx_let
               ))
  (libraries  libtarget
              libexecution
              libservice
              libserialize
              core_extended
              cstruct
              curl
              nocrypto
              postgresql
              ppx_deriving_yojson.runtime
              sodium
              ezgzip
              gcloud
              uutf
              yojson
              x509
              )
  (modules db
           file
           config
           user_db
           sql_compiler
           static_assets
           account
           event_queue
           httpclient
           curl_logging
           password
           )
)

(library
  (name libbackend_stdlib)
  (modes native)
  (flags (-warn-error +A -w +9))
  (preprocess (pps
               lwt_ppx
               ppx_bin_prot
               ppx_deriving.std
               ppx_deriving_yojson
               ppx_fields_conv
               ppx_sexp_conv
               ppx_pipebang
               ppx_let
               ))
  (libraries  libtarget
              libbackend_basics
              libexecution
              libservice
              libserialize
              core_extended
              cstruct
              curl
              nocrypto
              postgresql
              ppx_deriving_yojson.runtime
              sodium
              uutf
              yojson
              x509
              )
  (modules libcrypto
           libdb
           libdb2
           legacy
           libevent
           libhttpclient
           libjwt
           libstaticassets
           libtwilio
           libx509)
)

(library
  (name libbackend)
  (modes native)
  (flags (-warn-error +A -w +9))
  (preprocess (pps
               lwt_ppx
               ppx_bin_prot
               ppx_deriving.std
               ppx_deriving_yojson
               ppx_fields_conv
               ppx_sexp_conv
               ppx_pipebang
               ppx_let
               ))
  (modules analysis
           api
           auth
           authorization
           canvas
           canvas_clone
           cron
           garbage_collection
           init
           internal_analysis
           libdarkinternal
           migrations
           mock
           package_manager
           queue_worker
           rollbar
           secret
           serialize
           stroller
           stored_event
           stored_function_arguments
           stored_function_result
           swagger
           undo
           webserver
           worker_util
  )
  (libraries  libtarget_ocaml
              libbackend_stdlib
              libbackend_basics
              libexecution
              libservice
              libserialize
              cohttp-lwt
              core_extended
              cstruct
              curl
              curl.lwt
              lwt
              magic-mime
              multipart-form-data
              nocrypto
              nocrypto.lwt
              postgresql
              ppx_deriving_yojson.runtime
              session
              session-postgresql-lwt
              session-postgresql
              session-cohttp-lwt
              session-cohttp
              sodium
              uutf
              yojson
              x509
              )
)

