; Libbackend_stdlib is now it's own library, and Libbackend_basics are it's dependencies

(library
  (name libbackend_basics)
  (modes native)
  (flags (-warn-error +A -w +9))
  (preprocess (pps
               lwt_ppx
               ppx_bin_prot
               ppx_deriving.std
               ppx_deriving_yojson
               ppx_fields_conv
               ppx_sexp_conv
               ppx_pipebang
               ppx_let
               ))
  (libraries  libtarget
              libexecution
              libservice
              core_kernel
              cstruct
              curl
              nocrypto
              postgresql
              ppx_deriving_yojson.runtime
              sodium
              ezgzip
              gcloud
              uutf
              yojson
              x509
              )
  (modules db
           config
           user_db
           sql_compiler
           event_queue
           file
           password
           )
)

(library
  (name libbackend_stdlib)
  (modes native)
  (flags (-warn-error +A -w +9))
  (preprocess (pps
               lwt_ppx
               ppx_bin_prot
               ppx_deriving.std
               ppx_deriving_yojson
               ppx_fields_conv
               ppx_sexp_conv
               ppx_pipebang
               ppx_let
               ))
  (libraries  libtarget
              libbackend_basics
              libexecution
              libservice
              core_kernel
              cstruct
              curl
              nocrypto
              postgresql
              ppx_deriving_yojson.runtime
              sodium
              uutf
              yojson
              x509
              )
  (modules libcrypto
           libdb
           libdb2
           libevent
           libjwt
           libx509)
)

(library
  (name libbackend)
  (modes native)
  (flags (-warn-error +A -w +9))
  (preprocess (pps
               lwt_ppx
               ppx_bin_prot
               ppx_deriving.std
               ppx_deriving_yojson
               ppx_fields_conv
               ppx_sexp_conv
               ppx_pipebang
               ppx_let
               ))
  (modules account
           analysis
           api
           auth
           authorization
           canvas
           canvas_clone
           cron
           curl_logging
           garbage_collection
           httpclient
           init
           internal_analysis
           legacy
           libdarkinternal
           libhttpclient
           libstaticassets
           libtwilio
           migrations
           mock
           package_manager
           queue_worker
           rollbar
           secret
           serialize
           static_assets
           stroller
           stored_event
           stored_function_arguments
           stored_function_result
           stored_function_result_v3_migration
           swagger
           undo
           webserver
           worker_util
  )
  (libraries  libtarget_ocaml
              libbackend_stdlib
              libbackend_basics
              libexecution
              libservice
              libserialize
              cohttp-lwt
              core_extended
              cstruct
              curl
              curl.lwt
              lwt
              magic-mime
              multipart-form-data
              nocrypto
              nocrypto.lwt
              postgresql
              ppx_deriving_yojson.runtime
              session
              session-postgresql-lwt
              session-postgresql
              session-cohttp-lwt
              session-cohttp
              sodium
              uutf
              yojson
              x509
              )
)

