(library
  (name libexecution)
  (flags (-warn-error +A))
  (preprocess (pps  ppx_bin_prot
                    ppx_compare
                    ppx_deriving.std
                    ppx_deriving_yojson
                    ppx_pipebang
                    ppx_sexp_conv))
  (libraries
              ; note that libtarget.{ocaml,js} are not included here
              libtarget
              libcommon
              tablecloth-native
              core_kernel
              uuidm
              base64
              uri
              uuseg.string
              uunf.string
              uutf
              ppx_deriving_yojson.runtime)
)
