(library
  (name libserialize)
  (modes native)
  (flags (-warn-error +A -w +9))
  (preprocess (pps
               ppx_bin_prot
               ppx_deriving.std
               ppx_deriving_yojson
               ppx_pipebang
               ))
  (libraries  libexecution
              libservice
              core_extended
              ppx_deriving_yojson.runtime
              yojson
              )
)


