(library
  (name libserialize)
  (modes native)
  (c_names serialization_stubs)
  (library_flags (-cclib -uspecialpaultestinit))
  (flags (-warn-error +A -w +9))
  (preprocess (pps
               ppx_bin_prot
               ppx_deriving.std
               ppx_deriving_yojson
               ppx_pipebang
               ))
  (libraries  libexecution
              core_extended
              ppx_deriving_yojson.runtime
              yojson
              )
)