(library
  (name libservice)
  (modes native)
  (flags (-warn-error +A -w +9))
  (preprocess (pps lwt_ppx))
  (libraries  libcommon
              core
              lwt
              yojson
              curl
              curl.lwt
              cohttp.lwt
              postgresql
              )
)


