(library
  (name libtarget_fsharp)
  (implements libtarget)
  (modes native)
  (flags (-warn-error +A -w +9))
  (preprocess (pps  ppx_bin_prot
                    ppx_deriving.std
                    ppx_deriving_yojson
                    ppx_fields_conv
                    ppx_sexp_conv
                    ppx_pipebang
                    ))

  (libraries  nocrypto
              cstruct
              base64
              str
              core))
