(library
  (name libtarget_ocaml)
  (public_name libtarget.ocaml)
  (implements libtarget)
  (modes native)
  (flags (-warn-error +A -w +9))
  (preprocess (pps  ppx_bin_prot
                    ppx_compare
                    ppx_deriving.std
                    ppx_deriving_yojson
                    ppx_fields_conv
                    ppx_sexp_conv
                    ppx_pipebang
                    ))

  (libraries  nocrypto
              cstruct
              base64
              re2
              str
              core))