(library
  (name libunshared)
  (wrapped false)
  (flags (-warn-error +A -w +9))
  (preprocess (pps  ppx_bin_prot
                    ppx_deriving.std
                    ppx_deriving_yojson
                    ppx_pipebang
                    ppx_sexp_conv))
  (libraries core_kernel
             tablecloth-native)
)
