[package]
name = "queue-scheduler"
version = "0.1.0"
authors = ["Dark Inc <ops@darklang.com>"]
edition = "2018"

[lib]
name = "scheduler"
path = "src/lib.rs"

[[bin]]
name = "dark-queue-scheduler"
path = "src/main.rs"

[dependencies]
backoff = "0.2.1"
backtrace = "0.3"
chrono = "0.4"
config = "0.9"
failure = "0.1.8"
postgres = { version = "0.15", features = ["with-uuid"] }
rand = "0.8.4"
rollbar = "0.7.0"
slog = "2.7.0"
slog-json = "2.5.0"
uuid = { version = "0.5", features = ["v4"] }
