[package]
name = "dark-stroller"
version = "0.2.0"
edition = "2018"
authors = ["Sam Stokes <me@samstokes.co.uk>", "Dark Developers <ops@darklang.com>"]

[dependencies]
futures = "0.1.29"
failure = "0.1.8"
hmac = "0.7.1"
hyper = "0.12"
md5 = "0.7.0"
serde = { version = "1.0.135", features = ["derive"] }
serde_json = "1.0.64"
sha2 = "0.8.2"
reqwest = "0.9.24"
slog = "2.7.0"
slog-scope = "4.4.0"
slog-json = "2.3.0"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8", features = ["v4"] }
